// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colors export matches the snapshot 1`] = `
Object {
  "black": "#1b1f23",
  "blue": Array [
    "#f1f8ff",
    "#dbedff",
    "#c8e1ff",
    "#79b8ff",
    "#2188ff",
    "#0366d6",
    "#005cc5",
    "#044289",
    "#032f62",
    "#05264c",
  ],
  "gray": Array [
    "#fafbfc",
    "#f6f8fa",
    "#e1e4e8",
    "#d1d5da",
    "#959da5",
    "#6a737d",
    "#586069",
    "#444d56",
    "#2f363d",
    "#24292e",
  ],
  "green": Array [
    "#f0fff4",
    "#dcffe4",
    "#bef5cb",
    "#85e89d",
    "#34d058",
    "#28a745",
    "#22863a",
    "#176f2c",
    "#165c26",
    "#144620",
  ],
  "orange": Array [
    "#fff8f2",
    "#ffebda",
    "#ffd1ac",
    "#ffab70",
    "#fb8532",
    "#f66a0a",
    "#e36209",
    "#d15704",
    "#c24e00",
    "#a04100",
  ],
  "purple": Array [
    "#f5f0ff",
    "#e6dcfd",
    "#d1bcf9",
    "#b392f0",
    "#8a63d2",
    "#6f42c1",
    "#5a32a3",
    "#4c2889",
    "#3a1d6e",
    "#29134e",
  ],
  "red": Array [
    "#ffeef0",
    "#ffdce0",
    "#fdaeb7",
    "#f97583",
    "#ea4a5a",
    "#d73a49",
    "#cb2431",
    "#b31d28",
    "#9e1c23",
    "#86181d",
  ],
  "white": "#fff",
  "yellow": Array [
    "#fffdef",
    "#fffbdd",
    "#fff5b1",
    "#ffea7f",
    "#ffdf5d",
    "#ffd33d",
    "#f9c513",
    "#dbab09",
    "#b08800",
    "#735c0f",
  ],
}
`;

exports[`space export matches the snapshot 1`] = `
Array [
  0,
  4,
  8,
  16,
  24,
  32,
  40,
  48,
]
`;

exports[`theme (default export) matches the snapshot 1`] = `
Object {
  "breakpoints": Array [
    "1012px",
    "1280px",
    "544px",
    "768px",
  ],
  "colors": Object {
    "black": "#1b1f23",
    "blue": Array [
      "#f1f8ff",
      "#dbedff",
      "#c8e1ff",
      "#79b8ff",
      "#2188ff",
      "#0366d6",
      "#005cc5",
      "#044289",
      "#032f62",
      "#05264c",
    ],
    "gray": Array [
      "#fafbfc",
      "#f6f8fa",
      "#e1e4e8",
      "#d1d5da",
      "#959da5",
      "#6a737d",
      "#586069",
      "#444d56",
      "#2f363d",
      "#24292e",
    ],
    "green": Array [
      "#f0fff4",
      "#dcffe4",
      "#bef5cb",
      "#85e89d",
      "#34d058",
      "#28a745",
      "#22863a",
      "#176f2c",
      "#165c26",
      "#144620",
    ],
    "orange": Array [
      "#fff8f2",
      "#ffebda",
      "#ffd1ac",
      "#ffab70",
      "#fb8532",
      "#f66a0a",
      "#e36209",
      "#d15704",
      "#c24e00",
      "#a04100",
    ],
    "purple": Array [
      "#f5f0ff",
      "#e6dcfd",
      "#d1bcf9",
      "#b392f0",
      "#8a63d2",
      "#6f42c1",
      "#5a32a3",
      "#4c2889",
      "#3a1d6e",
      "#29134e",
    ],
    "red": Array [
      "#ffeef0",
      "#ffdce0",
      "#fdaeb7",
      "#f97583",
      "#ea4a5a",
      "#d73a49",
      "#cb2431",
      "#b31d28",
      "#9e1c23",
      "#86181d",
    ],
    "white": "#fff",
    "yellow": Array [
      "#fffdef",
      "#fffbdd",
      "#fff5b1",
      "#ffea7f",
      "#ffdf5d",
      "#ffd33d",
      "#f9c513",
      "#dbab09",
      "#b08800",
      "#735c0f",
    ],
  },
  "fontSizes": Array [
    12,
    14,
    16,
    20,
    24,
    32,
    40,
    48,
  ],
  "lineHeights": Object {
    "condensed": 1.25,
    "condensedUltra": 1,
    "default": 1.5,
  },
  "maxWidths": Object {
    "large": "1012px",
    "medium": "768px",
    "small": "544px",
    "xlarge": "1280px",
  },
  "space": Array [
    0,
    4,
    8,
    16,
    24,
    32,
    40,
    48,
  ],
}
`;

exports[`typography export .lineHeights matches the snapshot 1`] = `
Object {
  "condensed": 1.25,
  "condensedUltra": 1,
  "default": 1.5,
}
`;

exports[`typography export matches the snapshot 1`] = `
Object {
  "fontSizes": Array [
    12,
    14,
    16,
    20,
    24,
    32,
    40,
    48,
  ],
  "lineHeights": Object {
    "condensed": 1.25,
    "condensedUltra": 1,
    "default": 1.5,
  },
}
`;
